// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When the component is rendered and it has child components and the initiallyOpen prop should match the snapshot - the child components should be initially displayed 1`] = `
<div
  class="govuk-grid-row selectable-details"
>
  <div
    class="selectable-details-header"
  >
    <div
      class="govuk-checkboxes"
      style="display:inline-flex"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="details-checkbox-__name__"
          name="details-checkbox-__name__"
          type="checkbox"
          value="__choiceValue__"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="details-checkbox-__name__"
        >
          __label__
        </label>
      </div>
    </div>
    <div
      class="selectable-details-link"
    >
      <span>
        Details
      </span>
    </div>
  </div>
  <div
    class="selectable-details-content"
  >
    <p
      class="govuk-inset-text"
    >
       
    </p>
    <p
      class="govuk-inset-text"
    >
       
    </p>
    <p
      class="govuk-inset-text"
    >
       
    </p>
  </div>
</div>
`;

exports[`When the component is rendered and it has child components should match the snapshot - the child components should not be initially displayed by default 1`] = `
<div
  class="govuk-grid-row selectable-details"
>
  <div
    class="selectable-details-header"
  >
    <div
      class="govuk-checkboxes"
      style="display:inline-flex"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="details-checkbox-__name__"
          name="details-checkbox-__name__"
          type="checkbox"
          value="__choiceValue__"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="details-checkbox-__name__"
        >
          __label__
        </label>
      </div>
    </div>
    <div
      class="selectable-details-link"
    >
      <span>
        Details
      </span>
    </div>
  </div>
</div>
`;

exports[`When the component is rendered should match the snapshot 1`] = `
<div
  class="govuk-grid-row selectable-details"
>
  <div
    class="selectable-details-header"
  >
    <div
      class="govuk-checkboxes"
      style="display:inline-flex"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="details-checkbox-__name__"
          name="details-checkbox-__name__"
          type="checkbox"
          value="__choiceValue__"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="details-checkbox-__name__"
        >
          __label__
        </label>
      </div>
    </div>
    <div
      class="selectable-details-link"
    >
      <span>
        Details
      </span>
    </div>
  </div>
</div>
`;

exports[`When the component is rendered should render checked if the value matches 1`] = `
<div
  class="govuk-grid-row selectable-details"
>
  <div
    class="selectable-details-header"
  >
    <div
      class="govuk-checkboxes"
      style="display:inline-flex"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          checked=""
          class="govuk-checkboxes__input"
          id="details-checkbox-__name__"
          name="details-checkbox-__name__"
          type="checkbox"
          value="__value__"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="details-checkbox-__name__"
        >
          __label__
        </label>
      </div>
    </div>
    <div
      class="selectable-details-link"
    >
      <span>
        Details
      </span>
    </div>
  </div>
</div>
`;

exports[`When the component is rendered should render unchecked if the value doesnt match 1`] = `
<div
  class="govuk-grid-row selectable-details"
>
  <div
    class="selectable-details-header"
  >
    <div
      class="govuk-checkboxes"
      style="display:inline-flex"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="details-checkbox-__name__"
          name="details-checkbox-__name__"
          type="checkbox"
          value="__value__"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="details-checkbox-__name__"
        >
          __label__
        </label>
      </div>
    </div>
    <div
      class="selectable-details-link"
    >
      <span>
        Details
      </span>
    </div>
  </div>
</div>
`;
